--- a/patterns/buttons/button-save.html
+++ b/patterns/buttons/button-save.html
@@ -2,21 +2,21 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Text Area</title>
+  <title>Buttons Save</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
-  <link href="forms.css" rel="stylesheet">
+  <link href="buttons.css" rel="stylesheet">
 
 </head>
 <body>
-  <div>
-    <label for="comments peta">Comments</label>
-    <textarea class="italic milli grey-text" name="comments" id="commments" rows="4" cols="80">Leave us a message!</textarea>
-  </div>
+
+ <div>
+   <a class="btn btn-save pad-t"><span aria-label="Save">Save<i></i></span></a>
+ </div>
 
 </body>
 </html>
