--- a/patterns/forms/standard-radio-selection.html
+++ b/patterns/forms/standard-radio-selection.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Text Area</title>
+  <title>Standard Radio Selection Method</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -14,8 +14,10 @@
 </head>
 <body>
   <div>
-    <label for="comments peta">Comments</label>
-    <textarea class="italic milli grey-text" name="comments" id="commments" rows="4" cols="80">Leave us a message!</textarea>
+    <div>
+      <input type="radio" id="standard" name="shipping-method">
+      <label class="push-r mega" for="standard">Standard 4 day Shipping—FREE</label>
+    </div>
   </div>
 
 </body>
