--- a/patterns/buttons/buttons-submit.html
+++ b/patterns/buttons/buttons-submit.html
@@ -2,21 +2,23 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Text Area</title>
+  <title>Buttons</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
-  <link href="forms.css" rel="stylesheet">
+  <link href="buttons.css" rel="stylesheet">
 
 </head>
 <body>
-  <div>
-    <label for="comments peta">Comments</label>
-    <textarea class="italic milli grey-text" name="comments" id="commments" rows="4" cols="80">Leave us a message!</textarea>
-  </div>
+ <div class="pad-t">
+   <button type="submit" name="button">
+     <a class="btn btn-filter pad-t"><span aria-label="Filter">filter<i></i></span></a>
+   </button>
+ </div>
+
 
 </body>
 </html>
