Fix issues with pattern

--- a/pages/home.html
+++ b/pages/home.html
@@ -14,8 +14,8 @@
 
   <script type="application/json" data-pattern="banner/home-banner">{
     ".home-text-image-banner[class]": "home-text-image-banner banner-img-1 embed embed-16by9",
-    "h1": "Home of the Rubik",
-    "p": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+    "h1": "The Home of the Cubes",
+    "p": "The Magic Cube was created in 1974 by the Hungarian professor Ernő Rubik. Rubikas is devoted to producing and selling this world's top selling puzzle game."
   }</script>
 
   <main >
@@ -55,19 +55,19 @@
 
   <section>
     <div class="grid island-2 grid-stretch">
-      <div class="unit [ xs-1 l-1 xl-1-3 ] unit-content-distribute">
+      <div class="unit [ xs-1 l-1-3 xl-1-3 ] unit-content-distribute">
         <script type="application/json" data-pattern="card/basic-card">{
           "img[src]": "../images/checkers-two.jpg",
           "p": "Chess"
         }</script>
       </div>
-      <div class="unit [ xs-1 l-1 xl-1-3 ] unit-content-distribute">
+      <div class="unit [ xs-1 l-1-3 xl-1-3 ] unit-content-distribute">
         <script type="application/json" data-pattern="card/basic-card">{
           "img[src]": "../images/jigsaw.jpg",
           "p": "Puzzles"
         }</script>
       </div>
-      <div class="unit [ xs-1 l-1 xl-1-3 ] unit-content-distribute">
+      <div class="unit [ xs-1 l-1-3 xl-1-3 ] unit-content-distribute">
         <script type="application/json" data-pattern="card/basic-card">{
           "img[src]": "../images/checkers.jpg",
           "p": "Board Game"
