--- a/patterns/card/basic-card.html
+++ b/patterns/card/basic-card.html
@@ -20,8 +20,8 @@
       <img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
     </div>
     <div class="unit [ xs-1 ] island">
-      <p class="push-0 zetta bold">Item Name</p>
-      <p class="push-1-2 italic">$$$$</p>
+      <h3 class="push-0 zetta bold">Item Name</h3>
+      <span class="push-1-2 italic">$$$$</span>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <a class="btn btn-save"><span aria-label="Save">Save<i></i></span></a>
       <a class="btn btn-cart push-r-2"><span aria-label="Cart">Cart<i></i></span></a>
