--- a/patterns/card/info-card.html
+++ b/patterns/card/info-card.html
@@ -23,8 +23,8 @@
         </div>
         <div class="unit [ xs-1 ] ">
           <div class="text-info pad-t gutter">
-            <h3 class="zetta push-0 info-card-title bold">New Release</h3>
-            <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+            <h3 class="peta push-0 info-card-title bold">New Release</h3>
+            <p class="push-1-2 kilo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
           </div>
         </div>
       </div>
