--- a/patterns/navigation/tool-bars.html
+++ b/patterns/navigation/tool-bars.html
@@ -13,20 +13,20 @@
 </head>
 <body>
 
-  <div class="shadow-box grid pad-t-1-8 pad-b-1-8 tool-bar pad-t">
+  <div class="shadow-box grid tool-bar pad-t-1-4">
     <div class="unit [xs-1 s-1-2 m-1-2 l-1-2] text-left push-1-2">
       <ul class="list-group-inline gutter push-none">
-        <li><a class="sign-register link-box" href="">Sign-in</a></li>
-        <li class="gutter-1-4">or</li>
-        <li><a class="sign-register link-box" href="">Register</a></li>
+        <li><a class="sign-register link-box micro" href="">Sign-in</a></li>
+        <li class="gutter-1-8 micro">or</li>
+        <li><a class="sign-register link-box micro" href="">Register</a></li>
       </ul>
 
     </div>
     <div class="unit [xs-1 s-1-2 m-1-2 l-1-2] text-right gutter">
       <ul class="list-group-inline push-none">
-        <li><a class="link-box inline" href="#">EN - English</a></li>
+        <li><a class="link-box inline micro" href="#">EN - English</a></li>
         <li class="icon i-34 relative">
-          <a class="link-box cart-btn" href="#">
+          <a class="link-box cart-btn" href="checkout-page.html">
             <i class="icon i-32 absolute cart-click"><svg><use xlink:href="../../images/icons.svg#cart"></use></svg></i>
             <i class="icon i-32 absolute cart-clicked"><svg><use xlink:href="../../images/icons.svg#cart-item"></use></svg></i>
           </a>
