--- a/index.html
+++ b/index.html
@@ -1410,8 +1410,8 @@
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
   &lt;/div>
   &lt;div class="unit [ xs-1 ] island">
-    &lt;p class="push-0 zetta bold">Item Name&lt;/p>
-    &lt;p class="push-1-2 italic">$$$$&lt;/p>
+    &lt;h3 class="push-0 zetta bold">Item Name&lt;/h3>
+    &lt;span class="push-1-2 italic">$$$$&lt;/span>
     &lt;p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
     &lt;a class="btn btn-save">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
     &lt;a class="btn btn-cart push-r-2">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
@@ -1477,13 +1477,13 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="card-cart-item-code-sample-copy-chunk">&lt;div class="cart-item main-card gutter-1-2 pad-t-1-2 pad-b"&gt;
-  &lt;div class="push">
+              <code><pre id="card-cart-item-code-sample-copy-chunk">&lt;div class="cart-item main-card gutter-1-2 pad-t-1-2 pad-b grid"&gt;
+  &lt;div class="push unit xs-1 m-1-2">
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="iimage-of-our-variety-of-different-rubiks-cube">
   &lt;/div>
-  &lt;div class="gutter pad-b">
+  &lt;div class="gutter pad-b unit xs-1 m-1-2">
     &lt;h3 class="pad-b-1-2 push-1-2">Item Name&lt;/h3>
-    &lt;p class="push-1-2">$$$$&lt;/p>
+    &lt;span class="push-1-2 block">$$$$&lt;/span>
     &lt;p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
     &lt;a class="btn btn-drop pad-t">&lt;span aria-label="Drop">drop&lt;i>&lt;/i>&lt;/span>&lt;/a>
   &lt;/div>
@@ -1594,7 +1594,7 @@
     &lt;/div>
 
     &lt;div class="unit [ xs-1 s-1 l-3-4] gutter pad-t-1-2">
-      &lt;p class="info-item push-1-2 zetta">Item Name&lt;/p>
+      &lt;h3 class="info-item push-1-2 zetta">Item Name&lt;p>&lt;/p>
       &lt;div class="info-container pad-t-1-4 pad-b-1-4">
         &lt;ul class="list-group-inline push-0">
 
@@ -1615,7 +1615,7 @@
           &lt;li>&lt;a class="link-box" href="#">Make a Review&lt;/a>&lt;/li>
         &lt;/ul>
       &lt;/div>
-      &lt;h3 class="pad-t-1-2 peta push-1-2">$$$$&lt;/h3>
+        &lt;h3 class="pad-t-1-2 peta push-1-2">$$$$&lt;/h3>
       &lt;dl class="list-group-inline">
         &lt;dt class="milli push-0">Brand:&lt;/dt>
         &lt;dd class="milli push-0">Rubikas&lt;/dd>
@@ -1631,6 +1631,7 @@
         &lt;a class="btn btn-small btn-save btn-small-flip pad-t">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
         &lt;a class="btn btn-small btn-cart btn-small-reverse push-r-2 pad-t">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
       &lt;/div>
+      &lt;/h3>
     &lt;/div>
 
   &lt;/div>
@@ -1703,8 +1704,8 @@
       &lt;/div>
       &lt;div class="unit [ xs-1 ] ">
         &lt;div class="text-info pad-t gutter">
-          &lt;h3 class="zetta push-0 info-card-title bold">New Release&lt;/h3>
-          &lt;p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&lt;/p>
+          &lt;h3 class="peta push-0 info-card-title bold">New Release&lt;/h3>
+          &lt;p class="push-1-2 kilo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&lt;/p>
         &lt;/div>
       &lt;/div>
     &lt;/div>
@@ -2129,6 +2130,10 @@
         </ul>
   </div>
 
+      <div class="pattern-desc milli island" style="">
+        <div class="max-length"><p>The footer provides a way to indicate the end of the page and display other functions found on the website.</p>
+</div>
+      </div>
 
   
 
@@ -2167,29 +2172,23 @@
 
       &lt;div class="unit [ xs-1 m-1-3 ] island">
         &lt;ul class="list-group push-0">
-          &lt;span class="bold footer-section-heading mega push-1-2">Customer Service&lt;/span>
+          &lt;span class="bold footer-section-heading mega push">Customer Service&lt;/span>
           &lt;li>
-            &lt;p class="link-box footer-section-text push-0" href="#">Manuals&lt;/p>
+            &lt;p class="link-box footer-section-text  micro push-0" href="#">Manuals&lt;/p>
           &lt;/li>
           &lt;li>
-            &lt;p class="link-box footer-section-text push-0" href="#">Offers&lt;/p>
-          &lt;/li>
-          &lt;li>
-            &lt;p class="link-box footer-section-text push-0" href="#">Manuals&lt;/p>
-          &lt;/li>
-          &lt;li>
-            &lt;p class="link-box footer-section-text push-0" href="#">Competitions&lt;/p>
+            &lt;p class="link-box footer-section-text  micro push-0" href="#">Offers&lt;/p>
           &lt;/li>
         &lt;/ul>
       &lt;/div>
 
       &lt;div class="unit [ xs-1 m-1-3 ] island">
         &lt;ul class="list-group push-0">
-          &lt;span class="bold footer-section-heading mega push-1-2">Company info&lt;/span>
-          &lt;li>&lt;a class="link-box footer-section-text" href="../pages/home.html">HomePage&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="../pages/product-list.html">Product Page&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="../pages/product-detail.html">Product Details&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="../pages/checkout.html">Checkout&lt;/a>&lt;/li>
+          &lt;span class="bold footer-section-heading mega push">Company info&lt;/span>
+          &lt;li>&lt;a class="link-box footer-section-text micro" href="../pages/home.html">HomePage&lt;/a>&lt;/li>
+          &lt;li>&lt;a class="link-box footer-section-text micro" href="../pages/product-page.html">Product Page&lt;/a>&lt;/li>
+          &lt;li>&lt;a class="link-box footer-section-text micro" href="../pages/product-detail.html">Product Details&lt;/a>&lt;/li>
+          &lt;li>&lt;a class="link-box footer-section-text micro" href="../pages/checkout-page.html">Checkout&lt;/a>&lt;/li>
 
 
         &lt;/ul>
@@ -2200,32 +2199,37 @@
         &lt;div class="grid">
           &lt;div class="unit [ xs-1 m-1-2 ] ">
             &lt;ul class="list-group pad-t">
-              &lt;span class="bold footer-section-heading mega push-1-2">Feature&lt;/span>
-              &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 1&lt;/a>&lt;/li>
+              &lt;span class="bold footer-section-heading mega push">Features&lt;/span>
+              &lt;li>
+                &lt;p class="link-box footer-section-text micro push-0" href="#">Competitions&lt;/p>
+              &lt;/li>
+              &lt;li>
+                &lt;p class="link-box footer-section-text  micro push-0" href="#">Manuals&lt;/p>
+              &lt;/li>
             &lt;/ul>
           &lt;/div>
 
           &lt;div class="unit [ xs-1 m-1-2] ">
-            &lt;span class="bold footer-section-heading mega push-1-2">Follow us:&lt;/span>
+            &lt;span class="bold footer-section-heading mega push">Follow us:&lt;/span>
             &lt;ul class="list-group-inline">
               &lt;li>
                 &lt;a href="#">
-                    &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#facebook"/>&lt;/svg>&lt;/i>
+                    &lt;i class="icon i-24">&lt;svg>&lt;use xlink:href="../../images/icons.svg#facebook"/>&lt;/svg>&lt;/i>
                   &lt;/a>
               &lt;/li>
               &lt;li>
                 &lt;a href="#">
-                    &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#twitter"/>&lt;/svg>&lt;/i>
+                    &lt;i class="icon i-24">&lt;svg>&lt;use xlink:href="../../images/icons.svg#twitter"/>&lt;/svg>&lt;/i>
                   &lt;/a>
               &lt;/li>
               &lt;li>
                 &lt;a href="#">
-                    &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#snapchat"/>&lt;/svg>&lt;/i>
+                    &lt;i class="icon i-24">&lt;svg>&lt;use xlink:href="../../images/icons.svg#snapchat"/>&lt;/svg>&lt;/i>
                   &lt;/a>
               &lt;/li>
               &lt;li>
                 &lt;a href="#">
-                    &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#instagram"/>&lt;/svg>&lt;/i>
+                    &lt;i class="icon i-24">&lt;svg>&lt;use xlink:href="../../images/icons.svg#instagram"/>&lt;/svg>&lt;/i>
                   &lt;/a>
               &lt;/li>
             &lt;/ul>
@@ -3208,10 +3212,10 @@
       </nav>
   </div>
 
-      <div class="pattern-desc milli island" >
-        <div class="max-length"><p>The main navigation should be found at the top of the browser.</p>
+    <div class="pattern-desc milli island" >
+      <div class="max-length"><p>The header provide a way to move across different pages on website.</p>
 </div>
-      </div>
+    </div>
 
   
 
@@ -3275,34 +3279,36 @@
                 </i>
               </button>
               <code><pre id="header-header-code-sample-copy-chunk">&lt;header class="text-center" role="banner" id="id" tabindex="0"&gt;
-  &lt;div class="header-logo grid grid-middle valign-middle text-center island-2">
-    &lt;div class="unit [ xs-1-2 ] text-right gutter">
-      &lt;i class="icon i-64">
-            &lt;img src="../../images/logo-64.svg" alt="">
-          &lt;/i>
+  &lt;a href="home.html" class="link-box rubikas-logo-text">
+    &lt;div class="grid grid-middle valign-middle text-center island-2">
+      &lt;div class="unit [ xs-1-2 ] text-right gutter">
+        &lt;i class="icon i-64">
+                &lt;img src="../../images/logo-64.svg" alt="">
+              &lt;/i>
+      &lt;/div>
+      &lt;div class="unit [ xs-1-2] text-left">
+        &lt;span class="yotta bold">Rubikas&lt;/span>
+      &lt;/div>
     &lt;/div>
-    &lt;div class="unit [ xs-1-2] text-left">
-      &lt;span class="tena bold rubikas-logo-text">Rubikas&lt;/span>
-    &lt;/div>
-  &lt;/div>
+  &lt;/a>
   &lt;div class="nav-bar">
     &lt;input type="checkbox" class="nav-check hide-custom-input" id="nav-check">
     &lt;div class="input-toggle relative">
-      &lt;label class="link-box toggle-btn icon i-64 absolute pin-tr" for="nav-check">
-        &lt;i class="icon i-64 absolute pin-c toggle-click">&lt;svg>&lt;use xlink:href="../../images/icons.svg#toggle"/>&lt;/svg>&lt;/i>
-        &lt;i class="icon i-64 absolute toggle-clicked">&lt;svg>&lt;use xlink:href="../../images/icons.svg#toggle-down"/>&lt;/svg>&lt;/i>
+      &lt;label class="link-box toggle-btn icon i-48 absolute pin-tr" for="nav-check">
+        &lt;i class="icon i-48 absolute pin-c toggle-click">&lt;svg>&lt;use xlink:href="../../images/icons.svg#toggle"/>&lt;/svg>&lt;/i>
+        &lt;i class="icon i-48 absolute toggle-clicked">&lt;svg>&lt;use xlink:href="../../images/icons.svg#toggle-down"/>&lt;/svg>&lt;/i>
       &lt;/label>
     &lt;/div>
 
     &lt;nav class="nav-bar pad-t pad-b valign-middle text-center nav-bar-toggle" role="navigation" id="#nav">
       &lt;ul id="nav-items" class="list-group push-0 pad-b-1-2">
-        &lt;li class="gutter-1-4 bold hover-nav current">&lt;a class="link-box" href="#" aria-details="Go back to Homepage">Home&lt;/a>&lt;/li>
-        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Check out the list of New Releases">New Releases&lt;/a>&lt;/li>
-        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Take a better look at our Rubiks">Rubiks&lt;/a>&lt;/li>
-        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Get a look at our list of offers">Offers&lt;/a>&lt;/li>
-        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Read the right Manual how to solve your cube">Manual&lt;/a>&lt;/li>
-        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Check the other Puzzles we carry">More Puzzles&lt;/a>&lt;/li>
-        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Sign up and be part of our Competitons">Competitions&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 milli bold hover-nav current">&lt;a class="link-box" href="home.html" aria-details="Go back to Homepage">Home&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 milli bold hover-nav">&lt;a class="link-box" href="#" aria-details="Check out the list of New Releases">New Releases&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 milli bold hover-nav">&lt;a class="link-box" href="product-page.html" aria-details="Take a better look at our Rubiks">Rubiks&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 milli bold hover-nav">&lt;a class="link-box" href="#" aria-details="Get a look at our list of offers">Offers&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 milli bold hover-nav">&lt;a class="link-box" href="#" aria-details="Read the right Manual how to solve your cube">Manual&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 milli bold hover-nav">&lt;a class="link-box" href="#" aria-details="Check the other Puzzles we carry">More Puzzles&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 milli bold hover-nav">&lt;a class="link-box" href="#" aria-details="Sign up and be part of our Competitons">Competitions&lt;/a>&lt;/li>
       &lt;/ul>
     &lt;/nav>
   &lt;/div>
@@ -3393,10 +3399,10 @@
       </nav>
   </div>
 
-      <div class="pattern-desc milli island" >
-        <div class="max-length"><p>Bread crumbs should be used on the website so audience know where they are on the page. It should be located at the top of the page.</p>
+    <div class="pattern-desc milli island" >
+      <div class="max-length"><p>The navigations provide a way to move around the website from one section to any other section on the site.</p>
 </div>
-      </div>
+    </div>
 
   
 
@@ -3614,6 +3620,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>Section illustration should be used exclusively with any illustration.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -3692,6 +3702,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>Sections should be used when displaying additional information on page.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -3764,6 +3778,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>Tool Bars are to be used in every page before the header to allow users to login, register or select a different language setting.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -3792,20 +3810,20 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="navigation-tool-bars-code-sample-copy-chunk">&lt;div class="shadow-box grid pad-t-1-8 pad-b-1-8 tool-bar pad-t"&gt;
+              <code><pre id="navigation-tool-bars-code-sample-copy-chunk">&lt;div class="shadow-box grid tool-bar pad-t-1-4"&gt;
   &lt;div class="unit [xs-1 s-1-2 m-1-2 l-1-2] text-left push-1-2">
     &lt;ul class="list-group-inline gutter push-none">
-      &lt;li>&lt;a class="sign-register link-box" href="">Sign-in&lt;/a>&lt;/li>
-      &lt;li class="gutter-1-4">or&lt;/li>
-      &lt;li>&lt;a class="sign-register link-box" href="">Register&lt;/a>&lt;/li>
+      &lt;li>&lt;a class="sign-register link-box micro" href="">Sign-in&lt;/a>&lt;/li>
+      &lt;li class="gutter-1-8 micro">or&lt;/li>
+      &lt;li>&lt;a class="sign-register link-box micro" href="">Register&lt;/a>&lt;/li>
     &lt;/ul>
 
   &lt;/div>
   &lt;div class="unit [xs-1 s-1-2 m-1-2 l-1-2] text-right gutter">
     &lt;ul class="list-group-inline push-none">
-      &lt;li>&lt;a class="link-box inline" href="#">EN - English&lt;/a>&lt;/li>
+      &lt;li>&lt;a class="link-box inline micro" href="#">EN - English&lt;/a>&lt;/li>
       &lt;li class="icon i-34 relative">
-        &lt;a class="link-box cart-btn" href="#">
+        &lt;a class="link-box cart-btn" href="checkout-page.html">
             &lt;i class="icon i-32 absolute cart-click">&lt;svg>&lt;use xlink:href="../../images/icons.svg#cart"/>&lt;/svg>&lt;/i>
             &lt;i class="icon i-32 absolute cart-clicked">&lt;svg>&lt;use xlink:href="../../images/icons.svg#cart-item"/>&lt;/svg>&lt;/i>
           &lt;/a>
