--- a/pages/checkout-page.html
+++ b/pages/checkout-page.html
@@ -13,7 +13,7 @@
   <script type="application/json" data-pattern="header/header"></script>
 
   <section class="pad-t-2 cart-section pad-b-2">
-    <div class="pad-t-2 gutter-2 wrapper">
+    <div class="pad-t-2 gutter-2">
       <h1>Cart Items</h1>
       <div class="grid">
         <div class="unit s-1 l-1-2">
