--- a/patterns/card/cart-item.html
+++ b/patterns/card/cart-item.html
@@ -15,13 +15,13 @@
 </head>
 <body>
 
-  <div class="cart-item main-card gutter-1-2 pad-t-1-2 pad-b">
-    <div class="push">
+  <div class="cart-item main-card gutter-1-2 pad-t-1-2 pad-b grid">
+    <div class="push unit xs-1 m-1-2">
       <img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="iimage-of-our-variety-of-different-rubiks-cube">
     </div>
-    <div class="gutter pad-b">
+    <div class="gutter pad-b unit xs-1 m-1-2">
       <h3 class="pad-b-1-2 push-1-2">Item Name</h3>
-      <p class="push-1-2">$$$$</p>
+      <span class="push-1-2 block">$$$$</span>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <a class="btn btn-drop pad-t"><span aria-label="Drop">drop<i></i></span></a>
     </div>
