--- a/patterns/card/icon-card.html
+++ b/patterns/card/icon-card.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="unit [ xs-1 s-1 l-3-4] gutter pad-t-1-2">
-      <p class="info-item push-1-2 zetta">Item Name</p>
+      <h3 class="info-item push-1-2 zetta">Item Name</p>
       <div class="info-container pad-t-1-4 pad-b-1-4">
         <ul class="list-group-inline push-0">
 
