--- a/patterns/footer/footer.html
+++ b/patterns/footer/footer.html
@@ -19,21 +19,19 @@
 
         <div class="unit [ xs-1 m-1-3 ] island">
           <ul class="list-group push-0">
-            <span class="bold footer-section-heading mega push-1-2">Customer Service</span>
-            <li><p class="link-box footer-section-text push-0"href="#">Manuals</p></li>
-            <li><p class="link-box footer-section-text push-0"href="#">Offers</p></li>
-            <li><p class="link-box footer-section-text push-0"href="#">Manuals</p></li>
-            <li><p class="link-box footer-section-text push-0"href="#">Competitions</p></li>
+            <span class="bold footer-section-heading mega push">Customer Service</span>
+            <li><p class="link-box footer-section-text  micro push-0"href="#">Manuals</p></li>
+            <li><p class="link-box footer-section-text  micro push-0"href="#">Offers</p></li>
           </ul>
         </div>
 
         <div class="unit [ xs-1 m-1-3 ] island">
           <ul class="list-group push-0">
-            <span class="bold footer-section-heading mega push-1-2">Company info</span>
-            <li><a class="link-box footer-section-text"href="../pages/home.html">HomePage</a></li>
-            <li><a class="link-box footer-section-text"href="../pages/product-list.html">Product Page</a></li>
-            <li><a class="link-box footer-section-text"href="../pages/product-detail.html">Product Details</a></li>
-            <li><a class="link-box footer-section-text"href="../pages/checkout.html">Checkout</a></li>
+            <span class="bold footer-section-heading mega push">Company info</span>
+            <li><a class="link-box footer-section-text micro"href="../pages/home.html">HomePage</a></li>
+            <li><a class="link-box footer-section-text micro"href="../pages/product-page.html">Product Page</a></li>
+            <li><a class="link-box footer-section-text micro"href="../pages/product-detail.html">Product Details</a></li>
+            <li><a class="link-box footer-section-text micro"href="../pages/checkout-page.html">Checkout</a></li>
 
 
           </ul>
@@ -44,32 +42,33 @@
           <div class="grid">
             <div class="unit [ xs-1 m-1-2 ] ">
               <ul class="list-group pad-t">
-                <span class="bold footer-section-heading mega push-1-2">Feature</span>
-                <li><a class="link-box footer-section-text"href="#">Option 1</a></li>
+                <span class="bold footer-section-heading mega push">Features</span>
+                <li><p class="link-box footer-section-text micro push-0"href="#">Competitions</a></li>
+                <li><p class="link-box footer-section-text  micro push-0"href="#">Manuals</p></li>
               </ul>
             </div>
 
             <div class="unit [ xs-1 m-1-2] ">
-              <span class="bold footer-section-heading mega push-1-2">Follow us:</span>
+              <span class="bold footer-section-heading mega push">Follow us:</span>
               <ul class="list-group-inline">
                 <li>
                   <a href="#">
-                    <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#facebook"></use></svg></i>
+                    <i class="icon i-24"><svg><use xlink:href="../../images/icons.svg#facebook"></use></svg></i>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#twitter"></use></svg></i>
+                    <i class="icon i-24"><svg><use xlink:href="../../images/icons.svg#twitter"></use></svg></i>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#snapchat"></use></svg></i>
+                    <i class="icon i-24"><svg><use xlink:href="../../images/icons.svg#snapchat"></use></svg></i>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#instagram"></use></svg></i>
+                    <i class="icon i-24"><svg><use xlink:href="../../images/icons.svg#instagram"></use></svg></i>
                   </a>
                 </li>
               </ul>
