--- a/patterns/navigation/section.html
+++ b/patterns/navigation/section.html
@@ -10,7 +10,7 @@
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
   <link href="navigation.css" rel="stylesheet">
-  <link href="buttons.css" rel="stylesheet">
+  <link href="../../buttons/buttons.css" rel="stylesheet">
 </head>
 <body>
 
